== Changelog ==

= 1.7.6 - xx-xx-2021 =
* Enhancement - Cache the form and entries results for better performance.
* Fix - Attach pdf to email glitches.
* Fix - Get entries permission issue.
* Fix - Smart Tag Page Issues.

= 1.7.5.2 - 19-06-2021 =
* Fix - Permission issue with file upload on frontend.
* Fix - Dropdown field value not displayed on view entry page.

= 1.7.5.1 - 18-06-2021 =
* Fix - Permission issue with forms visibility on frontend.

= 1.7.5 - 17-06-2021 =
* Feature - Divider field added.
* Feature - User capabilities added.
* Enhancement - Enable or Disable logs.
* Enhancement - Row clone option added.
* Fix - Mobile container margin issue.
* Fix - PayPal standard Redirection Issue.
* Fix - Form Field deletion with delete button.
* Fix - CSV textarea contents line break issue.
* Fix - Signature field display with smart tags.
* Fix - Password Validation show hide logic added.
* Fix - Welcome page redirection on every plugin updates.
* Fix - New Email Notifications not being saved on reload.
* Fix - New Email Notifications cloned blank for assigned values.
* Fix - During Form restore set the status to Publish instead of Draft.
* Fix - Empty checkboxes value in view entry form details.
* Fix - Stop default form creation when ThemeGrill Demo Importer plugin is active.
* Fix - Payment Multiple choices and checkboxes fields amount preview in form builder area.
* Fix - Success message issue with default form due to redirection.
* Fix - Missing Default values for fields in form builder area.
* Fix - Ajax Form Submission Smart Tag Not Working.
* Fix - Format Email Message Content For Signature field.
* Fix - Email Toggle Notification to individual connection.
* Fix - Format Email Message Content for Images and Files uploads.
* Fix - Delete uploaded files after removing Forms or Entries.

= 1.7.4 - 11-03-2021 =
* Fix - Hide empty select data field from entry view.
* Fix - Undefined variable `form_id` on form restriction.